Use javaslang.