@@ -1,28 +1,28 @@
 package eu.janvdb.aoc2016.day12;
 
 import java.io.IOException;
-import java.nio.charset.Charset;
 import java.util.Arrays;
-import java.util.List;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import org.apache.commons.io.IOUtils;
 
-import eu.janvdb.util.Pair;
+import javaslang.Tuple;
+import javaslang.Tuple2;
+import javaslang.collection.List;
+import javaslang.collection.Stream;
 
 public class Puzzle {
 
-	private static final List<Pair<Pattern, BiConsumer<State, Matcher>>> INSTRUCTIONS = Arrays.asList(
-			new Pair<Pattern, BiConsumer<State, Matcher>>(Pattern.compile("cpy ([abcd]) ([abcd])"), Puzzle::cpyRegister),
-			new Pair<Pattern, BiConsumer<State, Matcher>>(Pattern.compile("cpy ([+-]?\\d+) ([abcd])"), Puzzle::cpyValue),
-			new Pair<Pattern, BiConsumer<State, Matcher>>(Pattern.compile("inc ([abcd])"), Puzzle::inc),
-			new Pair<Pattern, BiConsumer<State, Matcher>>(Pattern.compile("dec ([abcd])"), Puzzle::dec),
-			new Pair<Pattern, BiConsumer<State, Matcher>>(Pattern.compile("jnz ([abcd]) ([+-]?\\d+)"), Puzzle::jnzRegister),
-			new Pair<Pattern, BiConsumer<State, Matcher>>(Pattern.compile("jnz ([+-]?\\d+) ([+-]?\\d+)"), Puzzle::jnzValue)
+	private static final List<Tuple2<Pattern, BiConsumer<State, Matcher>>> INSTRUCTIONS = List.of(
+			Tuple.of(Pattern.compile("cpy ([abcd]) ([abcd])"), Puzzle::cpyRegister),
+			Tuple.of(Pattern.compile("cpy ([+-]?\\d+) ([abcd])"), Puzzle::cpyValue),
+			Tuple.of(Pattern.compile("inc ([abcd])"), Puzzle::inc),
+			Tuple.of(Pattern.compile("dec ([abcd])"), Puzzle::dec),
+			Tuple.of(Pattern.compile("jnz ([abcd]) ([+-]?\\d+)"), Puzzle::jnzRegister),
+			Tuple.of(Pattern.compile("jnz ([+-]?\\d+) ([+-]?\\d+)"), Puzzle::jnzValue)
 	);
 
 	private static void cpyRegister(State state, Matcher matcher) {
@@ -90,9 +90,9 @@ public class Puzzle {
 	}
 
 	private void execute() throws IOException {
-		List<Consumer<State>> program = IOUtils.readLines(getClass().getResourceAsStream("code.txt"), Charset.forName("UTF-8")).stream()
+		List<Consumer<State>> program = Stream.ofAll(IOUtils.readLines(getClass().getResourceAsStream("code.txt"), "UTF-8"))
 				.map(this::assemble)
-				.collect(Collectors.toList());
+				.toList();
 
 		State state = new State();
 		while (state.pc < program.size()) {
@@ -102,10 +102,10 @@ public class Puzzle {
 	}
 
 	private Consumer<State> assemble(String line) {
-		for (Pair<Pattern, BiConsumer<State, Matcher>> instruction : INSTRUCTIONS) {
-			Matcher matcher = instruction.getV1().matcher(line);
+		for (Tuple2<Pattern, BiConsumer<State, Matcher>> instruction : INSTRUCTIONS) {
+			Matcher matcher = instruction._1().matcher(line);
 			if (matcher.matches()) {
-				return state -> instruction.getV2().accept(state, matcher);
+				return state -> instruction._2().accept(state, matcher);
 			}
 		}
 
